<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello" translatable="false">Playlist maker</string>
    <string name="search_button" translatable="false">Поиск</string>
    <string name="media_button" translatable="false">Медиатека</string>
    <string name="settings_button" translatable="false">Настройки</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share_the_app" translatable="false">Поделиться приложением</string>
    <string name="write_to_support" translatable="false">Написать в поддержку</string>
    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="arrow_back" translatable="false">Обратная стрелка</string>
    <string name="arrow_forward" translatable="false">Стрелка вперед</string>
    <string name="message_share">"https://practicum.yandex.ru/profile/android-developer/"</string>
    <string name="email_address">Olga.tyuren@yandex.ru</string>
    <string name="subject_line" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="context_of_the_message" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_button">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="clear_icon">Очистить</string>
    <string name="practikum">Yandex Practucum</string>

    <string name="track_cover">Обложка трека</string>
    <string name="track_name">Без названия</string>
    <string name="artist_name">Без имени</string>
    <string name="track_time">00:00</string>

    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="no_interrnet_conection"> Проблемы со связью\n\nЗагрузка не удалась.  Проверьте\nподключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="Error">Ошибка</string>
    <string name="You_were_looking_for">Вы искали</string>
    <string name="Clear_the_history">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="button_add">Добавить</string>
    <string name="button_play">Play</string>
    <string name="button_favorite">Избранное</string>

    <string name="track_not_found_error">Ошибка: трек не найден.</string>
    <string name="Button_Ok">OK</string>

    <string name="media_library">Медиатека</string>
    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>

    <string name="name">Название *</string>
    <string name="description">Описание</string>
    <string name="button_to_create">Создать</string>

    <string name="playlist_track_count">%d треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>


    <string name="track_a">%d трека</string>
    <string name="track">%d трек</string>
    <string name="tracks">%d треков</string>

    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="save">Сохранить</string>

    <string name="minutes">%d минут</string>
    <string name="minute">%d минута</string>
    <string name="minutes_s">%d минуты</string>


</resources>