<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.settings.ui.SettingsFragment"

    >

    <TextView
        style="@style/TitleManuStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginEnd="6dp"
        android:checked="false"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/dark_theme"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/item_text_size" />

    <TextView
        android:id="@+id/share_the_app"
        style="@style/TextSettingsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:text="@string/share_the_app"
        app:drawableRightCompat="@drawable/share" />


    <TextView
        android:id="@+id/write_to_support"
        style="@style/TextSettingsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:text="@string/write_to_support"
        app:drawableRightCompat="@drawable/support" />


    <TextView
        android:id="@+id/user_agreement"
        style="@style/TextSettingsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:text="@string/user_agreement"
        app:drawableRightCompat="@drawable/arrow_forward" />


</LinearLayout>