<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/arrow_back"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/arrow_back"
            app:icon="@drawable/arrow_back"
            app:iconPadding="@dimen/icon_to_text_distance"
            app:iconTint="@color/Charcoal" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="12dp"
            android:text="@string/settings_button"
            android:textColor="@color/Charcoal"
            android:textSize="@dimen/text_size" />


    </LinearLayout>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_compat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginEnd="6dp"
        android:checked="false"
        android:text="@string/dark_theme"
        android:textColor="@color/black"
        android:textSize="@dimen/item_text_size"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:text="@string/share_the_app"
            android:textColor="@color/black"
            android:textSize="@dimen/item_text_size" />

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="end|center_vertical"
            android:background="@color/white"
            android:contentDescription="@string/share_the_app"
            android:src="@drawable/share"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:text="@string/write_to_support"
            android:textColor="@color/black"
            android:textSize="@dimen/item_text_size" />

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="end|center_vertical"
            android:background="@color/white"
            android:contentDescription="@string/write_to_support"
            android:src="@drawable/support" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/item_text_size" />

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="end|center_vertical"
            android:background="@color/white"
            android:contentDescription="@string/arrow_forward"
            android:src="@drawable/arrow_forward" />
    </LinearLayout>

</LinearLayout>