<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/audioPlayerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimaryVariant"
    tools:context="com.example.playlistmaker.audioPlayer.ui.AudioPlayerActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:navigationIcon="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding" />

    <!--

    <ImageButton
        android:id="@+id/back_arrow_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="@dimen/padding"
        android:contentDescription="@string/arrow_back"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back"
        android:background="?attr/colorPrimaryVariant"
        />

    -->

    <ImageView
        android:id="@+id/artWork_audio_player"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top_artwork"
        android:layout_marginStart="@dimen/small_padding"
        android:layout_marginEnd="@dimen/small_padding"
        android:scaleType="centerCrop"
        app:layout_constraintCircleRadius="@dimen/circleRadius_artwork"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/trackName_audio_player"
        app:srcCompat="@drawable/placeholder"
        android:contentDescription="@string/track_cover" />


    <TextView
        android:id="@+id/trackName_audio_player"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/track_name"
        android:textSize="@dimen/text_size"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginTop="@dimen/audio_player_margin"
        android:layout_marginStart="@dimen/small_padding"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/artWork_audio_player"
        android:ellipsize="end"
        android:singleLine="true" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/artist_name"
        android:textSize="@dimen/refresh_text_size"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginTop="12dp"
        android:layout_marginStart="@dimen/small_padding"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/trackName_audio_player"
        android:ellipsize="end"
        android:singleLine="true" />

    <ImageButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:src="@drawable/button_add"
        android:layout_marginStart="@dimen/small_padding"
        android:layout_marginTop="@dimen/audio_player_margin"
        android:layout_marginEnd="@dimen/audio_player_margin"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/button_play"
        app:layout_constraintBottom_toBottomOf="@id/button_play"
        android:contentDescription="@string/button_add" />

    <ImageButton
        android:id="@+id/button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:src="@drawable/button_play"
        android:layout_marginTop="38dp"
        app:layout_constraintBottom_toTopOf="@id/progressTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist"
        android:contentDescription="@string/button_play" />

    <TextView
        android:id="@+id/progressTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/button_play"
        app:layout_constraintStart_toStartOf="@id/button_play"
        app:layout_constraintEnd_toEndOf="@id/button_play"
        app:layout_constraintBottom_toTopOf="@id/duration"
        android:text="@string/track_time" />

    <ImageButton
        android:id="@+id/button_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:src="@drawable/button_favorite"
        android:layout_marginEnd="@dimen/small_padding"
        app:layout_constraintBottom_toBottomOf="@id/button_play"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintTop_toTopOf="@id/button_add"
        android:contentDescription="@string/button_favorite" />

    <TextView
        style="@style/AudioPlayerTextLeft"
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="durationTag"
        app:layout_constraintTop_toBottomOf="@id/progressTime" />

    <TextView
        style="@style/AudioPlayerTextLeft"
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="albumTag"
        app:layout_constraintTop_toBottomOf="@id/duration" />

    <TextView
        style="@style/AudioPlayerTextLeft"
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="yearTag"
        app:layout_constraintTop_toBottomOf="@id/album" />

    <TextView
        style="@style/AudioPlayerTextLeft"
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="genreTag"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        style="@style/AudioPlayerTextLeft"
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="countryTag"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_tags="durationTag, albumTag, yearTag, genreTag, countryTag" />

    <TextView
        style="@style/AudioPlayerTextRight"
        android:id="@+id/trackTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/track_time"
        app:layout_constraintBaseline_toBaselineOf="@id/duration"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/textsBarrier" />

    <TextView
        style="@style/AudioPlayerTextRight"
        android:id="@+id/albumName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/track_name"
        app:layout_constraintBaseline_toBaselineOf="@id/album"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/textsBarrier"
        android:ellipsize="end"
        android:singleLine="true" />

    <TextView
        style="@style/AudioPlayerTextRight"
        android:id="@+id/yearName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/track_name"
        app:layout_constraintBaseline_toBaselineOf="@id/year"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/textsBarrier" />

    <TextView
        style="@style/AudioPlayerTextRight"
        android:id="@+id/genreName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/track_name"
        app:layout_constraintBaseline_toBaselineOf="@id/genre"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/textsBarrier" />

    <TextView
        style="@style/AudioPlayerTextRight"
        android:id="@+id/countryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/track_name"
        app:layout_constraintBaseline_toBaselineOf="@id/country"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/textsBarrier" />


</androidx.constraintlayout.widget.ConstraintLayout>