<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/media_fragment_playlists"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/media_new_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/placeholder_button_margin_top"
        android:backgroundTint="?attr/colorOnPrimary"
        app:cornerRadius="@dimen/placeholder_button_corner_radius"
        android:shadowRadius="0"
        android:text="@string/new_playlist"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="@dimen/refresh_text_size"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/media_placeholder_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/media_placeholder_margin_top"
        android:src="@drawable/search_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/media_new_playlist"
        android:contentDescription="@string/media_empty" />

    <TextView
        style="@style/ErrorText"
        android:id="@+id/media_placeholder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_playlists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/media_placeholder_image" />

</androidx.constraintlayout.widget.ConstraintLayout>