<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.playlistmaker.media.ui.newPlaylist.NewPlaylistFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_new_playlist"
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginBottom="@dimen/small_padding"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/new_playlist" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/placeholder_button_margin_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/placeholder_button_margin_top" />


    <ImageView
        android:id="@+id/placeholder_newPlaylist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/pl_margin_top"
        app:layout_constraintDimensionRatio="h,1:1"
        android:src="@drawable/placeholder_playlist"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar_new_playlist"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout_name"
        app:layout_constraintVertical_chainStyle="packed" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_small_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_small_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textInputLayout_name_top"
        android:hint="@string/name"
        style="@style/TextInputLayoutOutlineBox"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:boxStrokeColor="@drawable/box_stroke_color"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@id/right_small_guideline"
        app:layout_constraintStart_toStartOf="@id/left_small_guideline"
        app:layout_constraintTop_toBottomOf="@id/placeholder_newPlaylist"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout_description"
        app:layout_constraintVertical_chainStyle="packed">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginBottom="16dp"
        android:hint="@string/description"
        style="@style/TextInputLayoutOutlineBox"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:boxStrokeColor="@drawable/box_stroke_color"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@id/right_small_guideline"
        app:layout_constraintStart_toStartOf="@id/left_small_guideline"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_name"
        app:layout_constraintBottom_toTopOf="@id/button_create"
        app:layout_constraintVertical_chainStyle="packed">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="32dp" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_to_create"
        android:textSize="@dimen/item_text_size"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/ys_display_medium"
        app:layout_constraintStart_toStartOf="@id/left_small_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_small_guideline"
        app:layout_constraintBottom_toTopOf="@id/bottomGuideline"
        android:backgroundTint="@color/button_create"
        app:cornerRadius="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>